# RedEmu

./: .gitignore  CMakeLists.txt  README  README.md
cmake/: SDL2Targets-noconfig.cmake
include/: events.h  exception.h  types.h
include/GFX/: GFX_init.h
include/SDL2/: SDL_config.h
src/: events.c  exception.c  main.c
src/GFX/: GFX_init.c
